--- a/index.html
+++ b/index.html
@@ -14,10 +14,24 @@
     <nav class="navbar bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="./images/slack-logo.png" alt="" width="100" class="d-inline-block align-text-top">
+          <img src="./images/slack-logo.png" alt="slack-logo" width="100" class="d-inline-block align-text-top">
         </a>
       </div>
     </nav>
+
+    <!-- Hero -->
+    <div class="container pt-5">
+      <div class="row">
+        <div class="col">
+          <h1>One platform for your team and your work</h1>
+          <p>All the features of Slack work together so you can, too.</p>
+          <button type="button" class="btn btn-primary">Learn More</button>
+        </div>
+        <div class="col">
+          <img class="w-100" src="./images/hero.jpeg" alt="hero">
+        </div>
+      </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
   </body>
