--- a/index.html
+++ b/index.html
@@ -33,6 +33,67 @@
       </div>
     </div>
 
+    <!-- Footer -->
+    <div class="container pt-5">
+      <div class="row">
+        <div class="col">
+          <a href="#">
+            <img src="./images/slack-logo.png" alt="slack-logo" width="100" class="d-inline-block align-text-top">
+          </a>
+        </div>
+        <div class="col">
+          <b>WHY SLACK?</b>
+          <ul>
+            <li><a href="#">Slack vs. Email</a></li>
+            <li><a href="#">Channels</a></li>
+            <li><a href="#">Engagement</a></li>
+            <li><a href="#">Scale</a></li>
+            <li><a href="#">Watch the Demo</a></li>
+          </ul>
+        </div>
+        <div class="col">
+          <b>PRODUCT</b>
+          <ul>
+            <li><a href="#">Features</a></li>
+            <li><a href="#">Integrations</a></li>
+            <li><a href="#">Enterprise</a></li>
+            <li><a href="#">Solutions</a></li>
+            <li><a href="#">What's New</a></li>
+          </ul>
+        </div>
+        <div class="col">
+          <b>PRICING</b>
+          <ul>
+            <li><a href="#">Plans</a></li>
+            <li><a href="#">Paid vs. Free</a></li>
+          </ul>
+        </div>
+        <div class="col">
+          <b>RESOURCES</b>
+          <ul>
+            <li><a href="#">Partners</a></li>
+            <li><a href="#">Developers</a></li>
+            <li><a href="#">Community</a></li>
+            <li><a href="#">Apps</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Help Center</a></li>
+            <li><a href="#">Events</a></li>
+          </ul>
+        </div>
+        <div class="col">
+          <b>COMPANY</b>
+          <ul>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Leadership</a></li>
+            <li><a href="#">Investor Relations</a></li>
+            <li><a href="#">News</a></li>
+            <li><a href="#">Media Kit</a></li>
+            <li><a href="#">Careers</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
   </body>
 </html>
