feat(index): basic features

--- a/index.html
+++ b/index.html
@@ -33,6 +33,52 @@
       </div>
     </div>
 
+    <!-- Features -->
+    <div class="container pt-5s">
+      <h1>Work more easily with everyone</h1>
+      <p>Stay on the same page and make decisions faster by bringing all of your work communication into one place.</p>
+      <div class="row row-cols-1 g-4">
+        <div class="col">
+          <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Channels</h5>
+              <p class="card-text">Stay organized and focused with central spaces for conversations, files, tools and people.</p>
+              <button type="button" class="btn btn-outline-primary">Learn More</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Slack Connect</h5>
+              <p class="card-text">Collaborate with teams at other companies the same way you do with teams at your own.</p>
+              <button type="button" class="btn btn-outline-primary">Learn More</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Huddles and Clips</h5>
+              <button type="button" class="btn btn-outline-primary">Learn More</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Messaging</h5>
+              <button type="button" class="btn btn-outline-primary">Learn More</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- Footer -->
     <div class="container pt-5">
       <div class="row">
